--- a/web/style/style.css
+++ b/web/style/style.css
@@ -1,3 +1,10 @@
+body{
+    background: url(../images/pattern_texture1190.jpg) no-repeat;
+    color: white;
+    font-family: arial;
+    font-weight: 400;
+}
+
 div.player{
     margin: 10px;
     display: inline-block;
@@ -6,7 +13,8 @@ div.player{
 div.activeRater{
     opacity: 100%;
     border: 2px solid red;
-    border-radius: 3px;
+    border-radius: 5px;
+    background:darkblue;
 }
 .rateWindow{
     opacity: 0%;
@@ -120,13 +128,14 @@ div.blind span{
 }
 div.board{
     position: relative;
-    margin: 20px;
+    margin: 20px auto;
+    margin-top: 100px;
     padding: 20px;
     width: 600px;
     height: 300px;
     border-radius: 50%;
-    background-color: green;
-    border: 4px #87570A solid;
+    background-image: url(../images/table.jpg);
+    border: 10px #87570A solid;
 }
 div.spot-0{
     position:absolute;
@@ -183,8 +192,50 @@ span.bank{
     left: 180px;
     top: 180px;
 }*/
-
-
-
-
+#step{
+    opacity: 0;
+    position:absolute
+}
+#join{
+    width: 200px;
+    height: 40px;
+    background-color: greenyellow;
+    border-radius: 15px;
+    font-family: arial;
+    font-weight: 600;
+}
+div.rateWindow{
+    margin: 60px auto;
+    width: 300px;
+}
+#acceptRate{
+   display: block;
+    width: 200px;
+    height: 50px;
+    background-color: lawngreen;
+    border: 3px solid darkblue;
+    border-radius: 5px;
+    
+}
+#rate{
+    width: 200px;
+}
+#fold{
+    display: block;
+     width: 200px;
+    height: 50px;
+    border: 3px solid darkblue;
+    border-radius: 5px;
+    background-color: indianred;
+}
+#check{
+    display: block;
+     width: 200px;
+    height: 50px;
+    border: 3px solid darkblue;
+    border-radius: 5px;
+}
+#panel{
+    opacity: 0;
+}
 
